over the fold text changed, footer logo not displaying fixed, footer logo alignment fixed

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -26,10 +26,12 @@
             }
             .logo {
                 display: flex;
-                align-items: center;
+                align-items: flex-end;
+                text-align: center;
+                justify-content: center;
                 color: $beige;
                 .logoPic {
-                    width: 45px;
+                    width: 95px;
                     height: auto;
                     aspect-ratio: 1/1;
                 }
@@ -86,7 +88,6 @@
             font-weight: 400;
             text-transform: uppercase;
             font-size: 20px;
-
             flex-direction: column;
             align-items: center;
             text-align: justify;
@@ -126,32 +127,26 @@
             .logoContainer {
                 display: flex;
                 flex-direction: row;
-                .logo {
-                    display: flex;
-                    align-items: center;
-                    color: $beige;
-                    align-items: center;
-                    justify-content: center;
-                        .logoPic {
-                            width: 95px;
-                            /* height: auto; */
-                            aspect-ratio: 1/1;
-                            order: 1;
-                            margin-top: -45px;
-                            float: left;
-                            background-image: url(/images/logo_texto.png);
-                            background-position: center;
-                            background-size: contain;
-                            background-repeat: no-repeat;
-                        }
-                    
-                    .logoText {
-                        font-family: calson;
-                        font-size: 24px;
-                    }
-                }
             }
         }
+    }
+}
+.logo {
+    display: flex;
+    align-items: end;
+    color: $beige;
+    align-items: center;
+    justify-content: center;
+    .logoPic {
+        width: 110px;
+        aspect-ratio: 1/1;
+        order: 1;
+        margin-top: -45px;
+        float: left;
+        background-image: url(/images/logo_texto.png);
+        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
     }
 }
 
