--- a/styles/overTheFold.module.scss
+++ b/styles/overTheFold.module.scss
@@ -131,7 +131,7 @@
 
       .tittleOver {
         text-align: center;
-        font-family: roboto;
+        
         margin-bottom: 10px;
         font-weight: 700;
         font-size: 50pt;
@@ -178,6 +178,6 @@
 }
 @media screen and (max-width: 375px) {
   .formContainer {
-    margin-top: 20vh;
+    margin-top: 25vh;
   }
 }
